<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="statusbar_notifications">Notifications</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="persist_enable">Enable Persistence</string>
    <string name="persist_enable_summary">Enable data to persist across installs</string>
    <string name="persist_prop_density">Persist Density</string>
    <string name="persist_prop_density_summary">Persist LCD density</string>
    <string name="persist_file_hosts">Persist Hosts</string>
    <string name="persist_file_hosts_summary">Persist hosts file</string>
    <string name="enable_volume_options">Enable volume-panel</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications in the Statusbar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="notification_wallpaper_title">Notification background</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">When enabled, this option will allow you to change the brightness by
        sliding your finger across the Statusbar. Note: Will not be active when auto-brightness is on
    </string>
    <string name="follow_through_title">Follow through!</string>
    <string name="follow_through_summary">Make sure you follow the steps one-by-one and complete each one before
        proceeding to the next.
    </string>
    <string name="stock_density_title">1. Change LCD Density to stock value</string>
    <string name="stock_density_summary">Tablets and older phones use 160. Most phones use 240. Galaxy Nexus uses 320 by
        default.
    </string>
    <string name="reboot_title">2. Reboot!</string>
    <string name="reboot_summary">Come back here after the reboot and complete the rest of the steps!</string>
    <string name="clear_market_data_title">3. Clear market data</string>
    <string name="open_market_title">4. Open Market and hit accept</string>
    <string name="open_market_summary">Press back when done to return here.</string>
    <string name="custom_density_title">5. Change density to whatever you like!</string>
    <string name="custom_density_summary">If you ever have compatibility issues with the market, be sure to return here
        and repeat the process.
    </string>
    <string name="signal_style">Signal indicator style</string>
    <string name="signal_color_title">Signal text color</string>
    <string name="hide_signal_title">Hide signal bars</string>
    <string name="hide_signal_summary">Checking this hides the signal bar indicator (updates when signal strength
        changes)
    </string>
    <string name="wifi_signal_style">WiFi signal indicator style</string>
    <string name="wifi_signal_color_title">WiFi signal text color</string>
    <string name="alt_signal_title">Alt signal indicator layout</string>
    <string name="alt_signal_summary">Use alternate Gingerbread style signal cluster</string>
    <string name="show_4g_for_lte_title">Use 4G icon on LTE</string>
    <string name="show_4g_for_lte_summary">Show 4G network indicator icon instead of LTE icon</string>
    <string name="status_bar_network_title">Network traffic</string>
    <string name="status_bar_show_network_stats_title">Show network speeds</string>
    <string name="status_bar_network_stats_update_title">Update frequency</string>
    <string name="status_bar_network_stats_color_title">Network speeds text color</string>
    <string name="navbar_enable_bar">Enable bar</string>
    <string name="navigation_bar_height_title">Navigation Bar height</string>
    <string name="navigation_bar_height_summary">Navigation Bar height while in portrait</string>
    <string name="navigation_bar_height_landscape_title">Navigation Bar height landscape</string>
    <string name="navigation_bar_height_landscape_summary">Navigation Bar height while in landscape</string>
    <string name="navigation_bar_width_title">Navigation Bar width</string>
    <string name="navigation_bar_width_summary">Navigation Bar height if the bar is along a side</string>
    <string name="statusbar_hide_title">Hide Statusbar</string>
    <string name="statusbar_hide_summary">Checking this completely hides the Statusbar</string>
    <string name="ribbon_targets_cat">Ribbon options</string>
    <string name="enable_ribbon_text_title">Show app name</string>
    <string name="enable_ribbon_text_summary">Enable the app name text below the icon</string>
    <string name="ribbon_icon_size_title">Icon size</string>
    <string name="ribbon_icon_size_summary">Set size of your icons</string>
    <string name="less_notification_sounds_title">Less Frequent Notification sounds</string>
    <string name="less_notification_sounds_summary">Limit each app\'s notification sounds to play once per the set
        value
    </string>
    <string name="title_headphone_audio_mode">Headphones plugged-in action</string>
    <string name="summary_headphone_audio_mode">Define behavior of volume when headphones are plugged in</string>
    <string name="title_bt_audio_mode">Bluetooth A2DP connected action</string>
    <string name="summary_bt_audio_mode">Define behavior of volume when A2DP is connected</string>
    <string name="title_flip_mode">Face down audio mode</string>
    <string name="summary_flip_mode">Define behavior of volume when you flip your phone face-down</string>
    <string name="flip_cat_title">Face Down Action</string>
    <string name="title_timeout_sec">Screen Timeout</string>
    <string name="summary_timeout_sec">Time the screen is off before the flip sensor is disabled</string>
    <string name="title_down_sec">Face down seconds</string>
    <string name="summary_down_sec">Time required for your phone to be considered face down</string>
    <string name="summary_phone_flip_mode">Flipping your phone face-down will put your phone into Silent Mode while
        receiving a call.
    </string>
    <string name="title_phone_flip_mode">Phone call silence</string>
    <string name="lockscreen_security_cat">Security</string>
    <string name="lockscreen_music_cat">Music</string>
    <string name="lockscreen_menu_unlock_title">Menu unlock</string>
    <string name="lockscreen_menu_unlock_summary">Use the menu key to unlock the screen</string>
    <string name="lockscreen_auto_rotate_title">Allow lockscreen rotation</string>
    <string name="lockscreen_auto_rotate_summary">Lockscreen will have ability to rotate via device orientation. This is
        independent of Auto-rotation in display.
    </string>
    <string name="volume_rocker_wake_title">Volume wake</string>
    <string name="volume_rocker_wake_summary">Wake screen with volume rockers</string>
    <string name="volume_music_controls_title">Volume music controls</string>
    <string name="volume_music_controls_summary">Longpress volume buttons to skip tracks while screen is off. Volume
        wake will not work when music is playing.
    </string>
    <string name="lockscreen_weather_title">Enable</string>
    <string name="lockscreen_weather_summary">Show Weather Information on Lockscreen. You need to enable ROMControl\'s
        Weather service to use this
    </string>
    <string name="lockscreen_calendar_title">Enable</string>
    <string name="lockscreen_calendar_summary">Show upcoming events from your calendar on the lockscreen.</string>
    <string name="weather_enable">Enable weather</string>
    <string name="weather_enable_summary">Whether to pull weather information and display it throughout the ROM.
    </string>
    <string name="weather_use_custom_location">Use custom location</string>
    <string name="weather_use_custom_location_summary">Setting a custom location can save some battery. Otherwise
        network-location is used to determine your location.
    </string>
    <string name="weather_custom_location_dialog_title">Set your location</string>
    <string name="weather_custom_location_dialog_message">Be sure to follow the examples! Setting an invalid location
        will stop you from getting weather updates and may cause unexpected behavior.\n\nExamples: New York,NY // New
        York, NY // 10033 // London, England
    </string>
    <string name="weather_custom_location_title">Custom location</string>
    <string name="weather_show_location_title">Show location</string>
    <string name="weather_show_location_summary">Show your location.</string>
    <string name="weather_refresh_interval">Refresh interval</string>
    <string name="weather_use_celcius">Metric units</string>
    <string name="weather_use_celcius_summary">Enabling this will display weather temperature in Celsius rather than
        Fahrenheit and windspeed in km/h rather than mph.
    </string>
    <string name="weather_statusbar_style">Statusbar weather style</string>
    <string name="activity_open_title">Activity Open Animation</string>
    <string name="activity_close_title">Activity Close Animation</string>
    <string name="task_open_title">Task Open Animation</string>
    <string name="task_close_title">Task Close Animation</string>
    <string name="task_move_to_front_title">Move To Front Animation</string>
    <string name="task_move_to_back_title">Move To Back Animation</string>
    <string name="ad_enable_title">Enable</string>
    <string name="ad_enable_summary_on">Active display enabled</string>
    <string name="ad_enable_summary_off">Active display disabled</string>
    <string name="ad_text_title">Notification text</string>
    <string name="ad_text_summary">Show the notification text around the ring.</string>
    <string name="ad_all_notifications_title">All notifications</string>
    <string name="ad_all_notifications_summary">Show all notifications including ongoing, non-clearable notifications.</string>
    <string name="ad_pocket_mode_title">Pocket mode</string>
    <string name="ad_pocket_mode_summary">Show active display notifications when you take the device out of your pocket.</string>
    <string name="ad_redisplay_title">Redisplay notifications</string>
    <string name="ad_brightness_title">Notification brightness</string>
    <string name="ad_brightness_summary">Brightness level for displaying notifications when automatic brightness is not enabled.</string>
</resources>