<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<Preference
		android:title="@string/follow_through_title"
		android:summary="@string/follow_through_summary" />

	<ListPreference
		android:entries="@array/lcd_density_stock_entries"
		android:entryValues="@array/lcd_density_stock_values"
		android:key="stock_density"
		android:title="@string/stock_density_title"
		android:summary="@string/stock_density_summary" />

	<Preference
		android:key="reboot"
		android:title="@string/reboot_title"
		android:summary="@string/reboot_summary" />

	<Preference
		android:key="clear_market_data"
		android:title="@string/clear_market_data_title" />

	<Preference
		android:key="open_market"
		android:title="@string/open_market_title"
		android:summary="@string/open_market_summary" />

	<ListPreference
		android:entries="@array/lcd_density_entries"
		android:entryValues="@array/lcd_density_entries"
		android:key="lcd_density"
		android:title="@string/custom_density_title"
		android:summary="@string/custom_density_summary" />

</PreferenceScreen>