<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="enable_volume_options"
        android:title="@string/enable_volume_options" />

    <ListPreference
        android:entries="@array/less_notification_sounds_entries"
        android:entryValues="@array/less_notification_sounds_values"
        android:key="less_notification_sounds"
        android:summary="@string/less_notification_sounds_summary"
        android:title="@string/less_notification_sounds_title" />
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/headphone_audio_mode_entries"
        android:entryValues="@array/headphone_audio_mode_values"
        android:key="headphone_audio_mode"
        android:summary="@string/summary_headphone_audio_mode"
        android:title="@string/title_headphone_audio_mode" />
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/headphone_audio_mode_entries"
        android:entryValues="@array/headphone_audio_mode_values"
        android:key="bt_audio_mode"
        android:summary="@string/summary_bt_audio_mode"
        android:title="@string/title_bt_audio_mode" />
    <ListPreference
        android:entries="@array/phone_call_flip_entries"
        android:entryValues="@array/phone_call_flip_values"
        android:key="phone_ring_silence"
        android:summary="@string/summary_phone_flip_mode"
        android:title="@string/title_phone_flip_mode" />

    <PreferenceCategory
        android:key="flip_category"
        android:title="@string/flip_cat_title" >
        <ListPreference
            android:entries="@array/headphone_audio_mode_entries"
            android:entryValues="@array/headphone_audio_mode_values"
            android:key="flip_mode"
            android:summary="@string/summary_flip_mode"
            android:title="@string/title_flip_mode" />
        <ListPreference
            android:defaultValue="1500"
            android:entries="@array/flip_entries"
            android:entryValues="@array/flip_values"
            android:key="user_down_ms"
            android:summary="@string/summary_down_sec"
            android:title="@string/title_down_sec" />
        <ListPreference
            android:defaultValue="15000"
            android:entries="@array/flip_screenoff_entries"
            android:entryValues="@array/flip_screenoff_values"
            android:key="user_timeout"
            android:summary="@string/summary_timeout_sec"
            android:title="@string/title_timeout_sec" />
    </PreferenceCategory>

</PreferenceScreen>
