<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference
		android:key="enable_weather"
		android:title="@string/weather_enable"
		android:summary="@string/weather_enable_summary" />

	<CheckBoxPreference
		android:key="use_custom_location"
		android:dependency="enable_weather"
		android:title="@string/weather_use_custom_location"
		android:summary="@string/weather_use_custom_location_summary" />

	<EditTextPreference
		android:key="custom_location"
		android:title="@string/weather_custom_location_title"
		android:dependency="use_custom_location"
		android:dialogTitle="@string/weather_custom_location_dialog_title"
		android:dialogMessage="@string/weather_custom_location_dialog_message" />

	<CheckBoxPreference
		android:key="show_location"
		android:dependency="enable_weather"
		android:title="@string/weather_show_location_title"
		android:summary="@string/weather_show_location_summary" />

	<CheckBoxPreference
		android:key="use_celcius"
		android:dependency="enable_weather"
		android:title="@string/weather_use_celcius"
		android:summary="@string/weather_use_celcius_summary" />

        <CheckBoxPreference
		android:key="use_custom_app"
		android:dependency="enable_weather"
		android:title="@string/weather_start_custom_app"
		android:summary="@string/weather_start_custom_app_summary" />

        <Preference
		android:key="custom_app"
		android:title="@string/weather_custom_app_title"
		android:dependency="use_custom_app" />


	<ListPreference
		android:entries="@array/weather_interval_entries"
		android:entryValues="@array/weather_interval_values"
		android:dependency="enable_weather"
		android:key="refresh_interval"
		android:title="@string/weather_refresh_interval" />

	<ListPreference
		android:entries="@array/weather_statusbar_location_entries"
		android:entryValues="@array/weather_statusbar_location_values"
		android:dependency="enable_weather"
		android:key="statusbar_location"
		android:title="@string/weather_statusbar_style" />

</PreferenceScreen>
