<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="security"
            android:title="@string/lockscreen_security_cat">

        <CheckBoxPreference
            android:key="lockscreen_quick_unlock_control"
            android:title="@string/lockscreen_quick_unlock_control_title"
            android:summary="@string/lockscreen_quick_unlock_control_summary" />

        <CheckBoxPreference
            android:key="lockscreen_menu_unlock"
            android:title="@string/lockscreen_menu_unlock_title"
            android:summary="@string/lockscreen_menu_unlock_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="music"
        android:title="@string/lockscreen_music_cat">

        <CheckBoxPreference
            android:key="volume_rocker_wake"
            android:title="@string/volume_rocker_wake_title"
            android:summary="@string/volume_rocker_wake_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="volume_music_controls"
            android:title="@string/volume_music_controls_title"
            android:summary="@string/volume_music_controls_summary" />

    </PreferenceCategory>
    <PreferenceCategory
            android:key="misc"
            android:title="@string/misc_short">

            <CheckBoxPreference
                android:key="lockscreen_auto_rotate"
                android:title="@string/lockscreen_auto_rotate_title"
                android:summary="@string/lockscreen_auto_rotate_summary" />

    </PreferenceCategory>
</PreferenceScreen>
