<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- General section -->
    <header
        android:id="@+id/general"
        android:title="@string/header_general" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.baked.romcontrol.fragments.UserInterface"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_rom_control_general_ui"
        android:summary="@string/header_summary_general_ui" />

    <header
        android:id="@+id/power_menu"
        android:fragment="com.baked.romcontrol.fragments.PowerMenu"
        android:title="@string/power_menu_options"
        android:icon="@drawable/ic_rom_control_power_menu"
        android:summary="@string/header_summary_power_menu" />

    <!-- Navbar section -->
    <header
        android:id="@+id/navbar"
        android:title="@string/header_navbar" />

    <header
        android:id="@+id/nav_bar"
        android:fragment="com.baked.romcontrol.fragments.Navbar"
        android:title="@string/nav_bar"
        android:icon="@drawable/ic_rom_control_navigation_bar"
        android:summary="@string/header_summary_navigation_bar" />

    <!-- Lockscreen section -->
    <header
        android:id="@+id/lockscreen"
        android:title="@string/header_lockscreen" />

    <header
        android:id="@+id/lockscreen_weather"
        android:fragment="com.baked.romcontrol.fragments.Weather"
        android:summary="@string/lockscreen_weather_summary"
        android:icon="@drawable/ic_rom_control_weather"
        android:title="@string/lockscreen_weather_title" />

    <header
        android:id="@+id/lockscreen_calendar"
        android:fragment="com.baked.romcontrol.fragments.Calendar"
        android:summary="@string/lockscreen_calendar_summary"
        android:icon="@drawable/ic_rom_control_calendar"
        android:title="@string/lockscreen_calendar_title" />

    <!-- Statusbar section -->
    <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />

    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.baked.romcontrol.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:icon="@drawable/ic_rom_control_clock"
        android:title="@string/clock" />

    <header
        android:id="@+id/statusbar_powerwidget"
        android:fragment="com.baked.romcontrol.fragments.PowerWidget"
        android:icon="@drawable/ic_rom_control_powerwidget"
        android:summary="@string/header_summary_powerwidget"
        android:title="@string/header_powerwidget" />

    <header
        android:id="@+id/statusbar_toggles"
        android:fragment="com.baked.romcontrol.fragments.StatusBarToggles"
        android:icon="@drawable/ic_rom_control_toggles"
        android:summary="@string/header_summary_toggles"
        android:title="@string/toggles_layout" />

    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.baked.romcontrol.fragments.StatusBarBattery"
        android:icon="@drawable/ic_rom_control_battery"
        android:summary="@string/header_summary_battery" />

</preference-headers>
