<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/signal_style_entries"
        android:entryValues="@array/signal_style_values"
        android:key="signal_style"
        android:title="@string/signal_style" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="signal_color"
        android:title="@string/signal_color_title"
        android:defaultValue="@android:color/holo_blue_light" />

    <ListPreference
        android:entries="@array/wifi_signal_style_entries"
        android:entryValues="@array/wifi_signal_style_values"
        android:key="wifi_signal_style"
        android:title="@string/wifi_signal_style" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="wifi_signal_color"
        android:title="@string/wifi_signal_color_title"
        android:defaultValue="@android:color/holo_blue_light" />

    <CheckBoxPreference
        android:key="alt_signal"
        android:title="@string/alt_signal_title"
        android:summary="@string/alt_signal_summary" />

    <CheckBoxPreference
        android:key="hide_signal"
        android:title="@string/hide_signal_title"
        android:summary="@string/hide_signal_summary" />

    <CheckBoxPreference
        android:key="show_4g_for_lte"
        android:title="@string/show_4g_for_lte_title"
        android:summary="@string/show_4g_for_lte_summary" />

    <PreferenceCategory
        android:title="@string/status_bar_network_title">

        <CheckBoxPreference
            android:key="status_bar_show_network_stats"
            android:title="@string/status_bar_show_network_stats_title"
            android:defaultValue="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_network_status_color"
            android:title="@string/status_bar_network_stats_color_title"
            android:defaultValue="@android:color/holo_blue_light"
            android:dependency="status_bar_show_network_stats" />

        <ListPreference
            android:key="status_bar_network_status_update"
            android:dialogTitle="@string/status_bar_network_stats_update_title"
            android:title="@string/status_bar_network_stats_update_title"
            android:entries="@array/entries_status_bar_network_stats_update"
            android:entryValues="@array/values_status_bar_network_stats_update"
            android:dependency="status_bar_show_network_stats" />

    </PreferenceCategory>

</PreferenceScreen>
