<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	        <CheckBoxPreference
		        android:key="enable_nav_bar"
		        android:title="@string/navbar_enable_bar" />

	<PreferenceCategory
		android:key="advanced_cat"
		android:title="@string/advanced_settings">

		<ListPreference
			android:entries="@array/navigation_bar_height_entries"
			android:entryValues="@array/navigation_bar_height"
			android:key="navigation_bar_height"
			android:title="@string/navigation_bar_height_title"
                        android:summary="@string/navigation_bar_height_summary" />

		<ListPreference
			android:entries="@array/navigation_bar_height_landscape_entries"
			android:entryValues="@array/navigation_bar_height_landscape"
			android:key="navigation_bar_height_landscape"
			android:title="@string/navigation_bar_height_landscape_title"
                        android:summary="@string/navigation_bar_height_landscape_summary" />

		<ListPreference
			android:entries="@array/navigation_bar_width_entries"
			android:entryValues="@array/navigation_bar_width"
			android:key="navigation_bar_width"
			android:title="@string/navigation_bar_width_title"
                        android:summary="@string/navigation_bar_width_summary" />

	</PreferenceCategory>

</PreferenceScreen>
