<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBoxPreference
            android:key="enable_persist"
            android:title="@string/persist_enable"
            android:summary="@string/persist_enable_summary"  />

        <CheckBoxPreference
            android:key="persist_prop_density"
            android:dependency="enable_persist"
            android:title="@string/persist_prop_density"
            android:summary="@string/persist_prop_density_summary" />

        <CheckBoxPreference
            android:key="persist_file_hosts"
            android:dependency="enable_persist"
            android:title="@string/persist_file_hosts"
            android:summary="@string/persist_file_hosts_summary" />

</PreferenceScreen>
